Related Products Fix - Filters visible

--- a/MasterStyleCSS/MasterStyle.css
+++ b/MasterStyleCSS/MasterStyle.css
@@ -901,6 +901,7 @@ color:rgba(255, 255, 255, 0);
 /* Relative products */
 .br-sf-widget-merchant-popup-maincont{
     width: 60%;
+    margin-top: 4%;
 }
 /* End Relative products */
 
